<resources>
    <string name="app_name" translatable="false">playlist_maker</string>
    <string name="title_hello" translatable="false">Привет, Практикум</string>
    <string name="playlist_maker" translatable="false">Playlist maker</string>
    <string name="lt" translatable="false"><![CDATA[<-]]></string>
    <string name="Настройки" translatable="false">Настройки</string>
    <string name="Поделиться_приложением" translatable="false">Поделиться приложением</string>
    <string name="share_course_message">
    Посмотри курс Android-разработчик от Яндекс Практикума: https://practicum.yandex.ru/courses/android-developer/

</string>
    <string name="clear">Очистить</string>
    <string name="support_email">student@example.com</string>
    <string name="support_subject">
    Сообщение разработчикам и разработчицам приложения Playlist Maker
</string>
    <string name="support_body">
    Спасибо разработчикам и разработчицам за крутое приложение!
</string>
    <string name="user_agreement_url">https://yandex.ru/legal/practicum_offer/ru/</string>
    <string name="share_course_chooser_title">Поделиться ссылкой</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="Settings">Настройки</string>
    <string name="dark_theme">Тёмная тема</string>
    <string name="back">"Назад "</string>
    <string name="clear_search">Очистить</string>
    <string name="agreement">Пользовательское соглашение</string>
    <string name="share_the_app">Поделиться приложением</string>
    <string name="ask_the_support">Написать в поддержку</string>
    <string name="share_">Поделиться</string>
    <string name="support_">Написать в поддержку</string>

    <string name="nothing_found">Ничего не нашлось</string>
    <string name="no_connection">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="recent_searches">Вы искали</string>
    <string name="clear_recent_searches">Очистить историю</string>

    <string name="play">Проигрывать</string>
    <string name="duration_label">Длительность</string>
    <string name="album_label">Альбом</string>
    <string name="year_label">Год</string>
    <string name="genre_label">Жанр</string>
    <string name="country_label">Страна</string>

</resources>