<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    android:padding="@dimen/screen_padding">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/playlist_maker"
        android:layout_marginTop="@dimen/title_margin_top"
        android:layout_marginBottom="@dimen/title_margin_bottom"
        android:textColor="@color/white"
        android:textSize="@dimen/title_text_size"
        android:textStyle="bold"
        android:fontFamily="sans-serif-medium" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSearch"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/button_margin"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/search"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/button_text_size"
        app:cornerRadius="@dimen/button_corner_radius"
        app:icon="@drawable/loop_light_mode"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/icon_padding"
        app:iconTint="@color/black" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLibrary"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/button_margin"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/media"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/button_text_size"
        app:cornerRadius="@dimen/button_corner_radius"
        app:icon="@drawable/light_mode_media"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/icon_padding"
        app:iconTint="@color/black" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSettings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/button_margin"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/Settings"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/button_text_size"
        app:cornerRadius="@dimen/button_corner_radius"
        app:icon="@drawable/group"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/icon_padding"
        app:iconTint="@color/black" />

</LinearLayout>