<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/player_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftborder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightborder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp"/>


    <ImageButton
    android:id="@+id/ivBack"
    android:layout_width="@dimen/search_back_button_size"
    android:layout_height="@dimen/search_back_button_size"
    android:layout_marginStart="@dimen/arrow_back_audio_margin_start"
    android:layout_marginTop="@dimen/arrow_back_audio_margin_top"
    android:src="@drawable/arrow_back"
    android:background="?attr/selectableItemBackgroundBorderless"
    android:contentDescription="@string/back"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:tint="@color/icon_primary" />

    <ImageView
        android:id="@+id/trackImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:scaleType="centerCrop"
        android:background="@drawable/placeholder"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="@id/leftborder"
        app:layout_constraintEnd_toEndOf="@id/rightborder"
        app:layout_constraintCircleRadius="8dp"
        app:layout_constraintTop_toBottomOf="@id/ivBack" />

        <TextView
            android:id="@+id/trackName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Trackname"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@id/trackImage"
            android:textSize="@dimen/track_name_text_size"
            style="@style/TrackNameTextStyle"
            app:layout_constraintEnd_toEndOf="@id/trackImage"
            app:layout_constraintTop_toBottomOf="@id/trackImage"/>

        <TextView
            android:id="@+id/trackArtistTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Artist name"
            android:layout_marginTop="8dp"
            style="@style/ArtistName"
            android:textSize="@dimen/track_artist_time_text_size"
            app:layout_constraintStart_toStartOf="@id/trackImage"
            app:layout_constraintEnd_toEndOf="@id/trackImage"
            app:layout_constraintTop_toBottomOf="@id/trackName"/>

        <ImageButton
            android:id="@+id/playButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/play_button"
            android:enabled="false"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/play"
            android:background="@android:color/transparent"
            app:layout_constraintTop_toBottomOf="@id/trackArtistTime"
            app:layout_constraintStart_toStartOf="@id/leftborder"
            app:layout_constraintEnd_toEndOf="@id/rightborder"/>

        <TextView
            android:id="@+id/trackTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0:30"
            android:layout_marginTop="4dp"
            style="@style/ArtistName"
            app:layout_constraintEnd_toEndOf="@id/rightborder"
            app:layout_constraintStart_toStartOf="@+id/leftborder"
            app:layout_constraintTop_toBottomOf="@+id/playButton"/>

        <ImageView
            android:id="@+id/addToPlaylist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/add_to_playlist"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="@id/leftborder"
            app:layout_constraintTop_toTopOf="@id/playButton"
            app:layout_constraintBottom_toBottomOf="@id/playButton" />

        <ImageView
            android:id="@+id/likeTheSong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/like"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="@id/rightborder"
            app:layout_constraintTop_toTopOf="@id/playButton"
            app:layout_constraintBottom_toBottomOf="@id/playButton" />

        <TextView
            android:id="@+id/tvDurationLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/duration_label"
            style="@style/DetailLabelTextStyle"
            app:layout_constraintStart_toStartOf="@id/leftborder"
            app:layout_constraintTop_toBottomOf="@id/playButton" />

        <TextView
            android:id="@+id/tvDurationValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="5:35"
            style="@style/DetailValueTextStyle"
            app:layout_constraintEnd_toEndOf="@id/rightborder"
            app:layout_constraintBaseline_toBaselineOf="@id/tvDurationLabel" />

        <TextView
            android:id="@+id/tvAlbumLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/detail_row_margin_top"
            android:text="@string/album_label"

            style="@style/DetailLabelTextStyle"
            app:layout_constraintStart_toStartOf="@id/leftborder"
            app:layout_constraintTop_toBottomOf="@id/tvDurationLabel" />

        <TextView
            android:id="@+id/tvAlbumValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="Yesterday (Remastered 2009)"
            android:maxLines="1"
            android:ellipsize="end"
            android:gravity="end"
            style="@style/DetailValueTextStyle"
            app:layout_constraintStart_toEndOf="@id/tvAlbumLabel"
            app:layout_constraintEnd_toEndOf="@id/rightborder"
            app:layout_constraintBaseline_toBaselineOf="@id/tvAlbumLabel" />

        <TextView
            android:id="@+id/tvYearLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/detail_row_margin_top"
            android:text="@string/year_label"
            style="@style/DetailLabelTextStyle"
            app:layout_constraintStart_toStartOf="@id/leftborder"
            app:layout_constraintTop_toBottomOf="@id/tvAlbumLabel" />

        <TextView
            android:id="@+id/tvYearValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1965"
            style="@style/DetailValueTextStyle"
            app:layout_constraintEnd_toEndOf="@id/rightborder"
            app:layout_constraintBaseline_toBaselineOf="@id/tvYearLabel" />

        <TextView
            android:id="@+id/tvGenreLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/detail_row_margin_top"
            android:text="@string/genre_label"
            style="@style/DetailLabelTextStyle"
            app:layout_constraintStart_toStartOf="@id/leftborder"
            app:layout_constraintTop_toBottomOf="@id/tvYearLabel" />

        <TextView
            android:id="@+id/tvGenreValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Rock"
            style="@style/DetailValueTextStyle"
            app:layout_constraintEnd_toEndOf="@id/rightborder"
            app:layout_constraintBaseline_toBaselineOf="@id/tvGenreLabel" />

        <TextView
            android:id="@+id/tvCountryLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/detail_row_margin_top"
            android:layout_marginBottom="24dp"
            android:text="@string/country_label"
            style="@style/DetailLabelTextStyle"
            app:layout_constraintStart_toStartOf="@id/leftborder"
            app:layout_constraintTop_toBottomOf="@id/tvGenreLabel" />

        <TextView
            android:id="@+id/tvCountryValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Великобритания"
            style="@style/DetailValueTextStyle"
            app:layout_constraintEnd_toEndOf="@id/rightborder"
            app:layout_constraintBaseline_toBaselineOf="@id/tvCountryLabel" />






    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>