<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/bg_screen">

    <ImageButton
        android:id="@+id/ivBack"
        android:layout_width="@dimen/search_back_button_size"
        android:layout_height="@dimen/search_back_button_size"
        android:layout_marginStart="@dimen/search_back_margin_start"
        android:layout_marginTop="@dimen/search_back_margin_top"
        android:src="@drawable/arrow_back"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/icon_primary" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/search_title_margin_start"
        android:text="@string/search"
        android:textColor="@color/text_primary"
        android:textSize="@dimen/search_title_text_size"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintStart_toEndOf="@id/ivBack"
        app:layout_constraintTop_toTopOf="@id/ivBack"
        app:layout_constraintBottom_toBottomOf="@id/ivBack" />

    <FrameLayout
        android:id="@+id/searchContainer"
        android:layout_width="0dp"
        android:layout_height="@dimen/search_container_height"
        android:layout_marginStart="@dimen/search_container_margin"
        android:layout_marginTop="@dimen/search_container_margin"
        android:layout_marginEnd="@dimen/search_container_margin"
        android:background="@drawable/bg_search_field"
        android:paddingStart="@dimen/search_field_padding_horizontal"
        android:paddingEnd="@dimen/search_field_padding_horizontal"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/ivSearchIcon"
            android:layout_width="@dimen/search_icon_size"
            android:layout_height="@dimen/search_icon_size"
            android:layout_gravity="start|center_vertical"
            android:src="@drawable/loop_light_mode"
            android:contentDescription="@string/search" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etSearch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:hint="@string/search"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/search_text_color"
            android:textColorHint="@color/search_hint_color"
            android:paddingStart="@dimen/search_edit_padding_start"
            android:paddingEnd="@dimen/search_edit_padding_end" />

        <ImageView
            android:id="@+id/ivClear"
            android:layout_width="@dimen/search_clear_icon_size"
            android:layout_height="@dimen/search_clear_icon_size"
            android:layout_gravity="end|center_vertical"
            android:src="@drawable/ic_clear"
            android:visibility="gone"
            android:contentDescription="@string/clear"
            app:tint="@color/search_clear_color" />

    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/search_recycler_margin_top"
        app:layout_constraintTop_toBottomOf="@id/searchContainer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/item_track" />

</androidx.constraintlayout.widget.ConstraintLayout>